# android-cracker

./: README.md  aplc.py  apwlc.py  pyproject.toml
.github/workflows/: python.yml
cracker/: AbstractCracker.py  CrackManager.py  __init__.py  __main__.py  crack.py  cracking.py  exception.py  gesture.py  hash.py  hash_algo.py  hashcrack.py  locksettings.py  password.py  pin.py  policy.py  wordlist.py
cracker/gesture/: __init__.py  crackers.py  printer.py
cracker/parsers/: device_policies.py  salt.py
cracker/password/: __init__.py  crackers.py
cracker/pin/: __init__.py  crackers.py
sample/: badlocksettings.db  invalidlocksettings.db  new_gesture_1236.key  old_pin_1337.key
sample/device_policies/: bad_device_policies.xml  device_policies.xml
sample/keys/: new_password_1234.key  new_pin_2345.key  old_password_1ianian.key  old_pattern_01258.key
sample/locksettings/: signed_locksettings.db  unsigned_locksettings.db
tests/: test_device_policies.py  test_extract_salt.py  test_locksettings.py  test_password_property.py
